tests/ui/derives/derives-span-Eq-tuple-struct.stderr
error[E0277]: the trait bound `Error: Eq` is not satisfied
  --> $DIR/derives-span-Eq-tuple-struct.rs:8:5
   |
LL | #[derive(Eq,PartialEq)]
   |          -- in this derive macro expansion
LL | struct Struct(
LL |     Error
   |     ^^^^^ the trait `Eq` is not implemented for `Error`
   |
note: required by a bound in `AssertParamIsEq`
  --> $SRC_DIR/core/src/cmp.rs:LL:COL
   = note: this error originates in the derive macro `Eq` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Error` with `#[derive(Eq)]`
   |
LL + #[derive(Eq)]
LL | struct Error;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
